--- a/index.html
+++ b/index.html
@@ -8,21 +8,28 @@
 </head>
 <header id="header">
     <nav id="nav-bar">
-        
         <ul>
-            <li>Seccion 1<a class="nav-link" href=""></a></li>
-            <li>Seccion 2<a class="nav-link" href=""></a></li>
-            <li>Seccion 3<a class="nav-link" href=""></a></li>
+            <li><a class="nav-link" href="#formulario">Formulario</a></li>
+            <li><a class="nav-link" href=www.facebook.com>Seccion 2</a></li>
+            <li><a class="nav-link" href="">Seccion 3</a></li>
         </ul>
-        <img src="Imagenes/logo.png" alt="" id="header-img">
-    </nav>
-    
+        <img src="Imagenes/logo.jpg" alt="" id="header-img">
+        <section id="banner">
+            <img src="Imagenes/Beauty.png" alt="">
+        </section>
+    </nav> 
 </header>
 <body>
-    <form action="https://www.freecodecamp.com/email-submit" id="form">
-        <label for="email"></label>
-        <input type="email" id="email" placeholder="Ingrese su Email">
-        <input type="submit" id="submit">
-    </form>
+    <main>
+        <section id="formulario">
+            <form action="https://www.freecodecamp.com/email-submit" id="form">
+                <input type="email" id="email" placeholder="Ingrese su Email">
+                <input type="submit" value="Aceptar" id="submit">
+            </form>
+        </section>
+        <section>
+
+        </section>
+    </main>
 </body>
 </html>
