Agregando productos y usando css

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <nav id="nav-bar">
         <ul>
             <li><a class="nav-link" href="#formulario">Formulario</a></li>
-            <li><a class="nav-link" href=www.facebook.com>Seccion 2</a></li>
-            <li><a class="nav-link" href="">Seccion 3</a></li>
+            <li><a class="nav-link" href="#informacion">Información</a></li>
+            <li><a class="nav-link" href="#productos">Productos</a></li>
         </ul>
         <img src="Imagenes/logo.jpg" alt="" id="header-img">
-        <section id="banner">
-            <img src="Imagenes/Beauty.png" alt="">
-        </section>
     </nav> 
+    <section id="banner">
+        <img src="Imagenes/Beauty.png" alt="">
+    </section>
 </header>
 <body>
     <main>
@@ -27,9 +27,42 @@
                 <input type="submit" value="Aceptar" id="submit">
             </form>
         </section>
-        <section>
-
+        <section id="informacion">
+            <article id="natural">
+                <img src="Imagenes/natural comestico.png" alt="">
+                <p>Los comesticos son realizados con materiales naturales.</p>
+            </article>
+            <article id="organico">
+                <img src="Imagenes/Organic.png" alt="">
+                <p>Son creados con materiales organicos como ceras, aceites essenciales, entre otros.</p>
+            </article>
+            <article id="producto">
+                <img src="Imagenes/Products.png" alt="">
+                <p>Nuestros principales productos son polvos sueltos, sombras, labiales y pestaniñas.</p>
+                </article>
+        </section>
+        <section id="productos">
+            <h1>Nuestros Productos</h1>
+            <article id="imagenes">
+                <img src="Imagenes/polvo.jpg" alt="">
+                <p id="desc">Polvos Sueltos</p>
+            </article>
+            <article id="imagenes">
+                <img src="Imagenes/rimel.jpg" alt="">
+                <p id="desc">Pestañina</p>
+            </article>
+            <article id="imagenes">
+                <img src="Imagenes/sombra.jpg" alt="">
+                <p id="desc">Sombras</p>
+            </article>
+            <article id="imagenes">
+                <img src="Imagenes/labial.jpg" alt="">
+                <p id="desc">Labial</p>
+            </article>
         </section>
     </main>
 </body>
+<footer>
+    <p>Copyright© 2020 | Medellin - Antioquio, Colombia |</p>
+</footer>
 </html>
