--- a/index.html
+++ b/index.html
@@ -32,30 +32,33 @@
                 <img src="Imagenes/natural comestico.png" alt="">
                 <p>Los comesticos son realizados con materiales naturales.</p>
             </article>
+            <hr>
             <article id="organico">
                 <img src="Imagenes/Organic.png" alt="">
                 <p>Son creados con materiales organicos como ceras, aceites essenciales, entre otros.</p>
             </article>
+            <hr>
             <article id="producto">
                 <img src="Imagenes/Products.png" alt="">
                 <p>Nuestros principales productos son polvos sueltos, sombras, labiales y pestaniñas.</p>
                 </article>
+                <hr>
         </section>
         <section id="productos">
             <h1>Nuestros Productos</h1>
-            <article id="imagenes">
+            <article id="p1" class="imagenes">
                 <img src="Imagenes/polvo.jpg" alt="">
                 <p id="desc">Polvos Sueltos</p>
             </article>
-            <article id="imagenes">
+            <article id="p2" class="imagenes" >
                 <img src="Imagenes/rimel.jpg" alt="">
                 <p id="desc">Pestañina</p>
             </article>
-            <article id="imagenes">
+            <article id="p3" class="imagenes">
                 <img src="Imagenes/sombra.jpg" alt="">
                 <p id="desc">Sombras</p>
             </article>
-            <article id="imagenes">
+            <article id="p4" class="imagenes">
                 <img src="Imagenes/labial.jpg" alt="">
                 <p id="desc">Labial</p>
             </article>
