--- a/index.html
+++ b/index.html
@@ -3,19 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="Css/style.css">
     <title>Producto</title>
 </head>
 <header id="header">
-    <nav id="nav-bar">
-        <ul>
-            <li><a class="nav-link" href="#formulario">Formulario</a></li>
-            <li><a class="nav-link" href="#informacion">Información</a></li>
-            <li><a class="nav-link" href="#productos">Productos</a></li>
-        </ul>
-        <img src="Imagenes/logo.jpg" alt="" id="header-img">
-    </nav> 
-    <section id="banner">
+    <nav class="navbar navbar-expand-md  navbar-light">
+        <img src="Imagenes/logo.jpg" alt="" id="header-img"></img>
+        <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse flex-row-reverse" id="collapsibleNavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#formulario">Formulario</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#informacion">Información</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#productos">Productos</a>
+            </li>    
+          </ul>
+        </div>  
+      </nav>
+
+    <section id="banner" class="py-5">
         <img src="Imagenes/Beauty.png" alt="">
     </section>
 </header>
@@ -65,6 +78,9 @@
         </section>
     </main>
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <footer>
     <p>Copyright© 2020 | Medellin - Antioquio, Colombia |</p>
 </footer>
